--- a/WebApp/src/app/modules/documents/documents.component.html
+++ b/WebApp/src/app/modules/documents/documents.component.html
@@ -27,8 +27,26 @@
     </div>
 
     <clr-modal [(clrModalOpen)]="showDocument" [clrModalSize]="'xl'">
+        <h3 class="modal-title">Document</h3>
         <div  class="modal-body">
-            <app-viewer *ngIf="showDocument"></app-viewer>
+
+            <div class="clr-row">
+                <div class="clr-col-9">
+                    <app-viewer *ngIf="showDocument"></app-viewer>
+                </div>
+                <div class="clr-col-3">
+                    <form clrForm>
+                        <clr-select-container>
+                            <label>File: </label>
+                            <select clrSelect (change)="changeFile($event.target.value)">
+                                <option *ngFor="let elem of files"[value]="elem.number">
+                                    {{elem['originalFileName']}}
+                                </option>
+                            </select>
+                        </clr-select-container>
+                    </form>
+                </div>
+            </div>
         </div>
     </clr-modal>
 </main>
