--- a/WebApp/src/app/modules/documents/documents.component.html
+++ b/WebApp/src/app/modules/documents/documents.component.html
@@ -21,11 +21,17 @@
                     <clr-dg-cell>{{document.storeUser}}</clr-dg-cell>
                 </clr-dg-row>
 
-                <clr-dg-footer>2500 users</clr-dg-footer>
+                <clr-dg-footer>{{documents?.length || 0}} document(s)</clr-dg-footer>
             </clr-datagrid>
         </div>
     </div>
-
+    <div class="clr-row clr-justify-content-start">
+        <div class="clr-col-12">
+            <button type="button" class="btn btn-icon" aria-label="add" (click)="showAddNewDocumentModal = true">
+                <clr-icon shape="plus"></clr-icon>
+            </button>
+        </div>
+    </div>
     <clr-modal [(clrModalOpen)]="showDocument" [clrModalSize]="'xl'">
         <h3 class="modal-title">Document</h3>
         <div  class="modal-body">
@@ -47,6 +53,27 @@
                     </form>
                 </div>
             </div>
+        </div>
+    </clr-modal>
+
+    <clr-modal [(clrModalOpen)]="showAddNewDocumentModal">
+        <h3 class="modal-title">Add document</h3>
+        <div class="modal-body">
+            <form clrForm>
+                <clr-input-container>
+                    <label>Field 1 label</label>
+                    <input clrInput type="text" name="example" />
+                </clr-input-container>
+                <clr-input-container>
+                    <label>Field 2 label</label>
+                    <input clrInput type="text" name="example" />
+                </clr-input-container>
+            </form>
+
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-outline" (click)="showAddNewDocumentModal = false">Cancel</button>
+            <button type="button" class="btn btn-primary" (click)="showAddNewDocumentModal = false">Ok</button>
         </div>
     </clr-modal>
 </main>
