--- a/WebApp/src/app/modules/documents/documents.component.scss
+++ b/WebApp/src/app/modules/documents/documents.component.scss
@@ -5,3 +5,14 @@ main{
 clr-dg-cell{
   line-height: 0.9rem !important;
 }
+
+:host ::ng-deep .clr-accordion-inner-content{
+  padding: 0.6rem !important;
+  overflow: auto;
+  max-height: 23rem;
+}
+
+clr-select-container{
+  margin-top:0 !important;
+}
+
